Prevent showing horizontal scroll bar when page changes

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
   box-sizing: border-box;
 }
 
+body {
+  overflow: hidden;
+}
+
 button,
 input {
   font-family: inherit;
